--- a/Cocktailist/Cocktailist/UI/Storyboards/Base.lproj/Main.storyboard
+++ b/Cocktailist/Cocktailist/UI/Storyboards/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,46 +35,42 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="88H-JS-L4c">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Hso-64-bD1" userLabel="Text Stack View">
+                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="119.5"/>
                                                     <subviews>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Hso-64-bD1" userLabel="Text Stack View">
-                                                            <rect key="frame" x="0.0" y="19" width="106" height="82"/>
-                                                            <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple grand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNW-5g-uQ4">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="106" height="24"/>
-                                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                                    <nil key="textColor"/>
-                                                                    <nil key="highlightedColor"/>
-                                                                </label>
-                                                                <textView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePd-vQ-kW3">
-                                                                    <rect key="frame" x="0.0" y="32" width="106" height="50"/>
-                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
-                                                                    <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="17"/>
-                                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
-                                                                </textView>
-                                                            </subviews>
-                                                            <constraints>
-                                                                <constraint firstItem="ePd-vQ-kW3" firstAttribute="width" secondItem="Hso-64-bD1" secondAttribute="width" id="XSX-pJ-4B1"/>
-                                                            </constraints>
-                                                        </stackView>
-                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="T5k-ZX-Ia6" userLabel="Image Stack View">
-                                                            <rect key="frame" x="205" y="0.0" width="170" height="119.5"/>
-                                                            <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cocktailPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="NRO-7P-RBM">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="170" height="119.5"/>
-                                                                </imageView>
-                                                            </subviews>
-                                                        </stackView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Apple grand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNW-5g-uQ4">
+                                                            <rect key="frame" x="0.0" y="0.0" width="250" height="33"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <textView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePd-vQ-kW3">
+                                                            <rect key="frame" x="0.0" y="41" width="250" height="78.5"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
+                                                            <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="17"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                        </textView>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="T5k-ZX-Ia6" userLabel="Image Stack View">
+                                                    <rect key="frame" x="250" y="0.0" width="125" height="119.5"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cocktailPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="NRO-7P-RBM">
+                                                            <rect key="frame" x="0.0" y="0.0" width="125" height="119.5"/>
+                                                        </imageView>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="88H-JS-L4c" firstAttribute="centerX" secondItem="Wzj-F4-ueU" secondAttribute="centerX" id="M36-EE-Zmy"/>
-                                                <constraint firstItem="88H-JS-L4c" firstAttribute="height" secondItem="Wzj-F4-ueU" secondAttribute="height" id="mDu-6k-k83"/>
-                                                <constraint firstItem="88H-JS-L4c" firstAttribute="width" secondItem="Wzj-F4-ueU" secondAttribute="width" id="ojH-ah-fOQ"/>
-                                                <constraint firstItem="88H-JS-L4c" firstAttribute="centerY" secondItem="Wzj-F4-ueU" secondAttribute="centerY" id="qgU-F0-dsB"/>
+                                                <constraint firstItem="Hso-64-bD1" firstAttribute="leading" secondItem="Wzj-F4-ueU" secondAttribute="leading" id="3Xc-IZ-MpD"/>
+                                                <constraint firstAttribute="trailing" secondItem="T5k-ZX-Ia6" secondAttribute="trailing" id="8hS-gx-AKv"/>
+                                                <constraint firstItem="T5k-ZX-Ia6" firstAttribute="top" secondItem="Wzj-F4-ueU" secondAttribute="top" id="HNJ-rV-3gG"/>
+                                                <constraint firstItem="Hso-64-bD1" firstAttribute="height" secondItem="Wzj-F4-ueU" secondAttribute="height" id="KJP-sh-atO"/>
+                                                <constraint firstItem="Hso-64-bD1" firstAttribute="width" secondItem="Wzj-F4-ueU" secondAttribute="width" multiplier="2/3" id="Pb3-9j-oix"/>
+                                                <constraint firstItem="T5k-ZX-Ia6" firstAttribute="leading" secondItem="Hso-64-bD1" secondAttribute="trailing" id="ZEW-Xr-bSl"/>
+                                                <constraint firstItem="T5k-ZX-Ia6" firstAttribute="height" secondItem="Hso-64-bD1" secondAttribute="height" id="gLX-Qy-rrZ"/>
+                                                <constraint firstItem="Hso-64-bD1" firstAttribute="top" secondItem="Wzj-F4-ueU" secondAttribute="top" id="l7d-So-IiG"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
